<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--  Here the layout seems pretty much Linear, so Linear Layout also could be
     a smart choice. Personally I've choose Constraint layout to maintain the screen
     configuration in different devices.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.InstructionsFragment">

        <TextView
            android:id="@+id/textViewExample"
            style="@style/LabelTextStyle"
            android:layout_marginTop="131dp"
            android:text="@string/text_of_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAnotherExample"
            style="@style/LabelTextStyle"
            android:layout_marginTop="79dp"
            android:text="@string/another_text_of_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewExample" />

        <Button
            android:id="@+id/buttonProceed"
            android:text="@string/proceed"
            style="@style/ButtonsStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>